# surveillance

./: .gitignore  ArchiveHandler.py  Dockerfile  HTTPVideoHandler.py  VideoHandler.py  VideoWriter.py  compose-local.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  real_time_object_detection.py  requirements.txt  run_with_venv.sh  services.py  settings.py  setup.sh  setup_venv.sh  test_video_handler.py  webstreaming.py
src/: main.py  real_time_object_detection.py  services.py  settings.py  video_writer.py
src/handlers/: archive_handler.py  http_video_handler.py  video_handler.py
src/templates/: main.html
templates/: index.html  main.html
