[tool.poetry]
name = "camera01"
version = "0.1.0"
description = ""
authors = ["Сергей Сушков <s_serguei@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"
flask = "^3.0.3"
imutils = "^0.5.4"
environs = "^11.0.0"
psutil = "^5.9.8"
asyncio = "^3.4.3"
docker = "^7.0.0"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
