[tool.poetry]
name = "camera01"
version = "0.2.0"
description = ""
authors = ["Сергей Сушков <s_serguei@rambler.ru>"]
package-mode = false
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
numpy = "^2.3.5"
opencv-python = "^4.10.0"
flask = "^3.1.0"
imutils = "^0.5.4"
environs = "^11.0.0"
psutil = "^6.1.0"
asyncio = "^3.4.3"
docker = "^7.0.0"
flask-cors = "^5.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
